Fri Sep 12 22:48:11 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/Event_Handler_T.h:

          . Bug fix where this header was missing an include file.

Fri Sep 12 22:42:11 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Workspace_Generator_T.cpp:

          . Removed the _CUTS suffix from the name of the workspace.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Traits.cpp:

          . Bug fix where if a stub project fail during generation, all
            the generation of subsequent stub projects failed. This was fixed
            by clearing the state of the file generator before opening a
            file, if neccessary.

Thu Sep 11 19:03:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/logging.mpc:

         . Fixed build errors related to seperating CIAO from CUTS
           standard distro on non-Windows systems.

Thu Sep 11 05:09:53 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Source_Traits.cpp:

          . Separated the code that decrements the argument count from the
            code that checks its value for debugging reasons.

Thu Sep 11 05:05:29 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/cuts/workers/Test_Logger:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.bat:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.build:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.java:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.sh:

          . Implemented a simple test to verify the logger works correctly
            in the Java world.

Thu Sep 11 05:00:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/cuts.java.build:

          . Add the cuts/UUID.idl and cuts/TimeValue.idl to the default