@@ -1,3 +1,11 @@
+Mon Sep 15 11:55:58 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Proxy_Source_Traits.cpp:
+
+          . Bug fix where setting the attributes via the proxy attempted
+            to set the attributes for the proxied component, event if the
+            proxied component was not loaded.
+
 Fri Sep 12 22:48:11 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/Event_Handler_T.h:
